k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: social
  labels:
    app.kubernetes.io/part-of: social-api-polyglot
