k8s/base/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  labels:
    app: mongodb
    app.kubernetes.io/part-of: social-api-polyglot
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: mongodb
          image: mongo:6
          ports:
            - name: mongodb
              containerPort: 27017
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "512Mi"
          volumeMounts:
            - name: mongodata
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongodata
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
