k8s/base/mongo-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  labels:
    app: mongo-service
    app.kubernetes.io/part-of: social-api-polyglot
spec:
  selector:
    app: mongo-service
  ports:
    - name: http
      port: 3002
      targetPort: http
